--- a/Trader_Biblioteca_Yfinance.ipynb
+++ b/Trader_Biblioteca_Yfinance.ipynb
@@ -75,7 +75,7 @@
       },
       "outputs": [],
       "source": [
-        "#Importanto a biblioteca yfinance\n",
+        "#Importando a biblioteca yfinance\n",
         "import yfinance as yf"
       ]
     },
